--- a/package.json
+++ b/package.json
@@ -21,11 +21,17 @@
   "devDependencies": {
     "autoprefixer": "^6.3.7",
     "css-loader": "^0.23.1",
+    "ejs-loader": "^0.3.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "html-webpack-plugin": "^2.22.0",
     "image-webpack-loader": "^2.0.0",
+    "jade-loader": "^0.8.0",
     "postcss-import": "^8.1.2",
     "postcss-loader": "^0.9.1",
     "precss": "^1.4.0",
+    "pug": "^0.1.0",
+    "pug-loader": "^2.1.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1",
