--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "data.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server -d --hot --inline"
+    "build": "node_modules/.bin/webpack",
+    "start": "node_modules/.bin/webpack-dev-server --inline --open"
   },
   "repository": {
     "type": "git",
@@ -19,22 +20,20 @@
   },
   "homepage": "https://github.com/shemerey/ppfc#readme",
   "devDependencies": {
-    "autoprefixer": "^6.3.7",
-    "css-loader": "^0.23.1",
-    "ejs-loader": "^0.3.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
-    "html-webpack-plugin": "^2.22.0",
-    "image-webpack-loader": "^2.0.0",
-    "jade-loader": "^0.8.0",
-    "postcss-import": "^8.1.2",
-    "postcss-loader": "^0.9.1",
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.22.0",
+    "clean-webpack-plugin": "^0.1.15",
+    "css-loader": "^0.26.1",
+    "extract-loader": "^0.1.0",
+    "extract-text-webpack-plugin": "^2.0.0-rc.2",
+    "file-loader": "^0.10.0",
+    "html-loader": "^0.4.4",
+    "postcss-import": "^9.1.0",
+    "postcss-loader": "^1.3.3",
     "precss": "^1.4.0",
-    "pug": "^0.1.0",
-    "pug-loader": "^2.1.0",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-hot-middleware": "^2.12.2"
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.2.1"
   }
 }
