--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "postcss-import": "^9.1.0",
     "postcss-loader": "^1.3.3",
     "precss": "^1.4.0",
+    "redux-logger": "^2.8.2",
     "style-loader": "^0.13.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.2.1"
