--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "card-validator": "^4.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-input-mask": "^0.7.8",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0"
   }
