--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-dom": "^15.4.2",
     "react-input-mask": "^0.7.8",
     "react-redux": "^5.0.3",
+    "react-router": "^2.0.0-rc5",
     "redux": "^3.6.0"
   }
 }
